# alvarium-sdk-rust

./: Cargo.toml  README.md
resources/: demia_streams_config.json  mqtt_stream_config.json  test_config.json
resources/test_keys/: private.key  public.key
src/: errors.rs  lib.rs  logging.rs  sdk.rs
src/annotations/: mod.rs
src/annotations/annotators/: mod.rs  pki.rs  source.rs  tls.rs  tpm.rs
src/config/: hash.rs  mod.rs  sdk.rs  sign.rs
src/config/stream/: demia_streams.rs  mod.rs  mqtt.rs
src/factories/: annotator_factory.rs  hash_factory.rs  mod.rs  signature_factory.rs  stream_factory.rs
src/managers/: mod.rs  tag_manager.rs
src/providers/: mod.rs
src/providers/hash_provider/: md5_provider.rs  mod.rs  none_provider.rs  sha256_provider.rs
src/providers/sign_provider/: ed25519.rs  mod.rs
src/providers/stream_provider/: demia.rs  mod.rs  mqtt.rs
