[package]
name = "alvarium-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
native-tls = ["dep:native-tls"]
rustls = ["dep:rustls", "webpki-roots"]

[dependencies]
tokio = { version = "1.32.0", features = ["rt", "macros"] }
chrono = "0.4.22"
lazy_static = "1.4.0"

md5-rs = "0.1.5"
hex = "0.4.3"
base64 = "0.13.0"

alvarium-annotator = { git = "https://github.com/project-alvarium/alvarium-annotator", branch = "main" }
streams = { git = "https://github.com/demia-protocol/demia-sdk", branch = "develop", default-features = false, features = ["utangle-client", "did"] }
iota-crypto = {version = "0.23.2", default-features = false, features = ["ed25519", "sha", "random"]}

serde = "1.0.143"
serde_json = "1.0.83"
gethostname = "0.2.3"

rand = { version = "0.8.5" }
ulid = "1.0.0"

reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"]}
futures = {version = "0.3.8", default-features = false}
async-trait = "0.1.57"

rustls = { version = "0.21.2", optional = true }
rustls-pemfile = "1.0.2"
native-tls = { version = "0.2.11", optional = true }
webpki-roots = { version = "0.23.1", optional = true }

rumqttc = "0.24.0"

thiserror = "1.0.40"
log = "0.4"
fern = "0.6.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.146"
